dropdown ui handling init

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,35 @@
 .layoutWrapper{
   color:red
 }
+body {
+  width: 100vw;
+  height: 100vh;
+} 
+/* For WebKit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 1px; /* Thin width */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Transparent background */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: white; /* Visible scrollbar thumb (adjust color) */
+  border-radius: 10px; /* Rounded scrollbar */
+}
+
+::-webkit-scrollbar-thumb:hover {
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin; /* Thin scrollbar */
+}
+
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
